<resources>
    <string name="app_name">Barfi</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gps_network_not_enabled">Location services not enabled. Please enable to use Barfi.</string>
    <string name="open_location_settings">Open location services</string>
    <string name="Cancel">Cancel</string>
    <string name="messages">Conversations</string>
    <string name="new_matches">Matches</string>
    <string name="no_matches_to_show">No new connections to show</string>
    <string name="no_chats_to_show">No chats to show</string>
    <string name="message">message…</string>
    <string name="gender">Gender</string>
    <string name="add_job">Add Job</string>
    <string name="job">Job</string>
    <string name="add_age">Add Age</string>
    <string name="age">Age</string>
    <string name="add_phone">Add Phone</string>
    <string name="phone">Phone</string>
    <string name="add_about">Add About</string>
    <string name="about">About me? \nHi! I am Barfi. I was created to help you find your life partner. You can delete me once my purpose is fulfilled. Have a good day and please switch on the internet to enjoy me. </string>
    <string name="add_name">Add Name</string>
    <string name="name">Name</string>
    <string name="interested_in">Interested In</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout">LogOut</string>
    <string name="profile_image">profile image</string>
    <string name="no_more_people_to_show">There\'re no new profiles around you right now.\n\nCheck back soon!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="edit">edit</string>
    <string name="settings">settings</string>
    <string name="chat_s_name">Chat\'s Name</string>
    <string name="chat_message">Chat Message</string>
    <string name="match_s_name">Match\'s Name</string>
    <string name="text">Text</string>
    <string name="tab">tab</string>
    <string name="both">Both</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--
    Extra profile details-->

    <string name="pets">Pets</string>
    <string name="status"> Marital status</string>
    <string name="reading">Reading</string>
    <string name="politics">Political view</string>
    <string name="diet">Diet type</string>
    <string name="kids">Want/Have Kids</string>
    <string name="exercise">Exercise</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="zodiac">Zodiac</string>
    <string name="height">Height</string>
    <string name="religion">Religion</string>
    <string name="degree">Education level</string>
    <string name="school_college">School/College</string>


    <string name="preview_profile"><u>Preview Profile</u></string>
    <string name="right_left_swipe_text"><b>Right</b> for the profiles you like \n and <b>Left</b> otherwise!</string>
    <string name="resend_otp"><u>Resend OTP</u></string>

    <string name="terms">By tapping "continue", you agree to our <u>Terms &amp; Privacy Policy.</u></string>


    <string name="facebook_app_id">586361782277092</string>
    <string name="fake_photos"><u>Note:</u> Account with inappropriate or fake photos will be strictly reported/deleted.</string>
    <string name="enter_profile_details_1"><u>Note:</u> Your phone number, email &amp; DOB is kept private and will be visible to you only. These details cannot be changed once your profile has been created.</string>
    <string name="offline"><b>You\'re offline!</b>\n\nPlease check your internet connectivity.</string>
    <string name="subs_terms_bottom"><b>Start and cancel anytime.</b>\nYou will not be charged during the trial period.\nAll payments are handled by Google. You can manage your subscription by accessing your Google Play Account Settings after purchase.
 </string>
    <string name="upgrade_subtext">100+ people upgraded to Premium Barfi recently.\nEnjoy Premium for a month just for the price of one coffee.</string>

</resources>
