<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDeadBackground">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:theme="@style/ToolBarStyle"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>




        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_marginBottom="25sp"
            android:layout_marginTop="25sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_weight="0.33"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_user_default" />

            <ImageView
                android:id="@+id/image"
                android:layout_weight="0.33"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_user_default" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="120sp"
                android:layout_weight="0.33"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_user_default" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10sp"
            android:paddingRight="10dp"
            android:textSize="10dp"
            android:textColorHighlight="@color/colorGray"
            android:layout_gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select to update"
            android:textStyle="normal"/>

        <TextView
            android:paddingTop="20sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:visibility="gone"/>
        <EditText
            android:padding="10sp"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:background="@color/colorWhite"
            android:hint="@string/add_name"
            android:visibility="gone"/>

        <TextView
            android:paddingTop="20sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:hint="@string/add_about"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="500"
            android:padding="10sp" />
        <TextView
            android:paddingTop="25sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:textStyle="bold" />

        <EditText
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:id="@+id/job"
            android:background="@color/colorWhite"
            android:hint="@string/add_job"
            />

        <TextView
            android:paddingTop="25sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:inputType="phone"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />

        <EditText
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:background="@color/colorWhite"
            android:hint="@string/add_phone"/>

        <TextView
            android:paddingTop="25sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold" />

        <TextView
            android:inputType="number"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age"
            android:textStyle="bold"
            android:background="@color/colorWhite"
            android:hint="@string/add_age"/>



        <TextView
            android:paddingTop="25sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold" />


        <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/radioRealButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:elevation="0dp"
            android:background="#7d7d7d"
            app:borderColor="@color/colorWhite"
            app:borderWidth="1dp"
            app:divider="@color/colorWhite"
            app:dividerPadding="0dp"
            app:dividerWidth="1dp"
            app:position="0"
            app:radius="20dp"
            app:ripple="true"
            app:rippleColor="@color/colorAccent"
            app:selectedBackground="@color/colorAccent"
            android:paddingBottom="20dp">


            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:drawable="@drawable/ic_male"
                app:drawableGravity="left"
                app:selectedTextColor="@color/colorWhite"
                app:text="@string/male"
                app:textColor="@color/colorWhite" />

            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:drawable="@drawable/ic_female"
                app:drawableGravity="left"
                app:selectedTextColor="@color/colorWhite"
                app:text="@string/female"
                app:textColor="@color/colorWhite" />
        </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>



    </LinearLayout>
</ScrollView>

