<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    android:id="@+id/layout">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorGrayLight"
        android:textColorHint="#7d7d7d">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="#3c3c3c"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorGrayLight"
        android:textColorHint="#7d7d7d">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="#3c3c3c"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#3c3c3c"
        android:textSize="16sp"
        android:id="@+id/forgotButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:id="@+id/login"
        android:textColor="@android:color/white" />

</LinearLayout>