<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <!-- <TextView
            android:id="@+id/likes"
            android:paddingTop="30sp"
            android:paddingLeft="20sp"
            android:paddingBottom="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_user"
            android:drawableTint="@color/colorBlack"
            android:text="likes"
            android:textStyle="bold" />-->


        <TextView
            android:paddingTop="30sp"
            android:paddingLeft="20sp"
            android:paddingBottom="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/new_matches"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_matches_layout"
            android:paddingTop="40sp"
            android:paddingBottom="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/no_matches_to_show"
            android:textStyle="bold"
            android:visibility="gone"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/match"
            android:scrollbars="horizontal">
        </androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:paddingTop="20sp"
            android:paddingLeft="20sp"
            android:paddingBottom="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/messages"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_chats_layout"
            android:paddingTop="40sp"
            android:paddingBottom="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorGray"
            android:text="@string/no_chats_to_show"
            android:textStyle="bold"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chat"
            android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</ScrollView>
