<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDeadBackground">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:theme="@style/ToolBarStyle"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:paddingTop="20sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interested_in"
            android:textStyle="bold" />

        <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/radioRealButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:elevation="0dp"
            android:background="#7d7d7d"
            app:borderColor="@color/colorWhite"
            app:borderWidth="1dp"
            app:divider="@color/colorWhite"
            app:dividerPadding="0dp"
            app:dividerWidth="1dp"
            app:position="0"
            app:radius="20dp"
            app:ripple="true"
            app:rippleColor="@color/colorAccent"
            app:selectedBackground="@color/colorAccent"
            android:paddingBottom="20dp">

            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                app:drawable="@drawable/ic_male"
                app:drawableGravity="left"
                app:selectedTextColor="@color/colorWhite"
                app:text="@string/male"
                app:textColor="@color/colorWhite" />

            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:drawable="@drawable/ic_female"
                app:drawableGravity="left"
                app:selectedTextColor="@color/colorWhite"
                app:text="@string/female"
                app:textColor="@color/colorWhite" />

            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:drawable="@drawable/ic_male_female"
                app:drawableGravity="left"
                app:drawableTint="@color/colorWhite"
                app:selectedTextColor="@color/colorWhite"
                app:text="@string/both"
                app:textColor="@color/colorWhite" />
        </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

        <TextView
            android:paddingTop="20sp"
            android:paddingLeft="10sp"
            android:paddingBottom="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search Radius"
            android:textStyle="bold" />

        <com.ramotion.fluidslider.FluidSlider
            android:layout_margin="8sp"
            android:id="@+id/fluidSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:size="normal"
            app:bar_color="@color/colorGray"
            app:duration="@android:integer/config_mediumAnimTime"
            tools:targetApi="lollipop"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/logout"
        android:id="@+id/logOut"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom"
        />
</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

