<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingTop="10sp"
    android:paddingBottom="70sp"
    android:outlineProvider="bounds"
    android:background="@color/colorWhite"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        android:elevation="2dp"
        android:id="@+id/cardView">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:src="@mipmap/ic_user_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_image" />

            <View
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:layout_height="180dp"
                android:background="@drawable/shadow_bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                >
                <TextView
                    android:id="@+id/name"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:paddingLeft="20sp"
                    android:textColor="@color/colorWhite"
                    tools:text="hello"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowRadius="10"
                    android:shadowColor="@color/colorGrayDark7f"/>
                <TextView
                    android:id="@+id/job"
                    android:drawableStart="@drawable/xyz"
                    android:drawableTint="@color/colorWhite"
                    android:drawablePadding="10sp"
                    android:text="@string/job"
                    android:paddingStart="14dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15sp"
                    android:padding="2dp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:shadowRadius="10"
                    android:shadowColor="@color/colorGray"/>

                <TextView
                    android:id="@+id/school"
                    android:drawableStart="@drawable/xyz"
                    android:drawableTint="@color/colorWhite"
                    android:drawablePadding="10sp"
                    android:text="@string/school_college"
                    android:layout_gravity="bottom"
                    android:textSize="14sp"
                    android:paddingStart="15dp"
                    android:padding="2dp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:shadowRadius="10"
                    android:shadowColor="@color/colorGray"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>


        </FrameLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>